# openvino_contrib

.ci/azure/: mac.yml
modules/custom_operations/: MANIFEST.in  setup.py
modules/custom_operations/user_ie_extensions/: CMakeLists.txt  pyproject.toml  setup.py
modules/custom_operations/user_ie_extensions/src/tokenizer/: CMakeLists.txt
modules/custom_operations/user_ie_extensions/src/tokenizer/python/: _custom_build.py  pyproject.toml_1  setup.py_1
modules/custom_operations/user_ie_extensions/src/tokenizer/python/ov_tokenizer/: __init__.py  hf_parser.py
modules/custom_operations/user_ie_extensions/src/tokenizer/python/tests/: test.py
modules/custom_operations/user_ie_extensions/tokenizer/: CMakeLists.txt
modules/custom_operations/user_ie_extensions/tokenizer/python/: _custom_build.py  pyproject.toml
modules/custom_operations/user_ie_extensions/tokenizer/python/ov_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
